# b_test_task

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 5ecd36a5cfb7_add_created_at.py  8cd01653745b_add_balances.py  b049410df4bb_init.py  f493877df7d1_rename_id_field.py
src/: app.py  exceptions.py  middlewares.py  settings.py  utils.py
src/admin_views/: __init__.py  account_operation.py  base_model.py  currency.py  customer.py  customer_account.py
src/db/: __init__.py  database.py
src/models/: __init__.py  account_operation.py  currency.py  customer.py  customer_account.py
src/routers/: __init__.py  account_operation.py  currency.py  customer.py  customer_account.py  misc.py
src/schemas/: __init__.py  account_operation.py  currencies.py  customer.py  customer_account.py
src/services/DAO/: __init__.py  account_operation.py  base.py  basemodel.py  currency.py  customer.py  customer_account.py
src/tests/: conftest.py  fixture_factory.py  fixtures.py  test_customer.py  test_health.py
src/tests/test_view/: test_customer.py
