[tool.poetry]
name = "b-test-task"
version = "1.0.0"
description = ""
authors = ["Mace"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.89.1"}
asyncpg = "^0.27.0"
pydantic = "^1.10.4"
gunicorn = "^20.1.0"
sqlmodel = "^0.0.8"
sqladmin = "^0.8.0"
alembic = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
